# github-classrom-test-demo

./: CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
src/: exercise-1.c  exercise-2.c  utils.h
tests/: exercise-1.cpp  exercise-2.cpp
